syntax = "proto3";

option go_package = "./internal/api/v1";

package gerencia;

service Gerencia {
    rpc RegistrarServidorGravacao (RegistrarServidorGravacaoReq) returns (RegistrarServidorGravacaoResp) {}
    rpc DatabaseConfig (DatabaseConfigReq) returns (DatabaseConfigResp) {}
}

message RegistrarServidorGravacaoReq {
    string identificador = 1;
    string endereco_servidor_gravacao = 2;
    int32 porta_servidor_gravacao = 3;
}

// TODO transformar em ENUM os status com informações pertinente
message RegistrarServidorGravacaoResp {
    string status = 1;
    string identificador =2;
}

message DatabaseConfigReq {}

message DatabaseConfigResp {
    string host = 1;
    int32 port = 2;
    string user = 3;
    string password = 4;
    string dbname = 5;
    int32 poolmaxconns = 6;
}